feat: add redis cache